K8S/mssql-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-nodeport
spec:
  type: NodePort
  selector:
    app: mssql
  ports:
    - port: 1433
      targetPort: 1433
      nodePort: 31433
