K8S/platforms-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: mdosmani/platformservice:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 8080
      targetPort: 80
