K8S/platforms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platformservice
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - port: 8080
      targetPort: 80
      nodePort: 30080
