K8S/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: host.docker.internal
      http:
        paths:
          - path: /api/platforms
            pathType: Prefix
            backend:
              service:
                name: platforms-clusterip-service
                port:
                  number: 80
          - path: /api/commands/platforms
            pathType: Prefix
            backend:
              service:
                name: commands-clusterip-service
                port:
                  number: 80
